--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This is a WebUI server for MCollective management
 
-It is written in with Django 1.3 and Python 2.6
+It is written with Django 1.3 and Python 2.6
