--- a/README
+++ b/README
@@ -1,42 +1,64 @@
-This is a WebUI server for MCollective management
+This is a WebUI server for the management of MCollective.
 
-It is written with Django 1.3 and Python 2.6 (but it works without problem with Python 2.4 too).
-So, first of all, you need to install this framework/language. Here a complete lists of packages required for webui:
- * Django-1.3-2.1.el5.noarch.rpm (to be ported in Kermit repo)
+It is written with Django 1.3 and Python 2.6 (but it works fine with Python 2.4
+too).
+
+First of all, you need to install this framework. Here a complete
+list of packages required for the webui:
+ * Django-1.3-2.1.el5.noarch.rpm 
  * python-httplib2
  * python-json
  * python-simplejson
 
-After packages installation you need to configure some application stuffs. In file 'settings.py' Django require some absolute path to locate sqlite db file (used for develoment), images, templates, ...
-So, at the moment, considering that we are in a hard development, we just have a standard configuration that will be changend later for realeses.
-In 'settings.py' file any reference to /home/mmornati/projects/automatix/(...) should be modified by your personal path.
+One way to get those packages for el5/centos 5 is the KERMIT repository :
+http://www.kermit.fr/repo/rpm/
 
-Another thing you may want to change is the Ruby MCollective Rest Server (by default considered on the same machine of webui, for security reasons). In 'settings.py' file you need to change the line:
+After the installation of the packages you'll need to configure the application.
+In the file 'settings.py', Django require some absolute path to locate the
+sqlite db file (used for development), images, templates, etc. 
+
+So, at the moment, considering that we are in intensive development, we just
+have a basic configuration that will be changed later for the release.
+In the file 'settings.py', any reference to /home/mmornati/projects/automatix/
+(...) should be modified with your own path.
+
+Another thing you may want to change is the Ruby MCollective Rest Server. By
+default it is set on the same machine as the webui, for security reasons.
+In the file 'settings.py' you need to adjust the line:
 
 RUBY_REST_BASE_URL="http://localhost:4567/mcollective/"
 
-with what you prefer.
-
-
-Now you are ready to configure your database (sqlite or what you have configured in settings.py). To do this run:
+Now you are ready to configure your database (sqlite or what you have configured
+in settings.py). To do this run:
 
 python src/automatix/manage.py syncdb
 
-from the project root path. If all works well you should see messages about tables creation and default data filling. During this setup (the first time) you need to configure the django admin user too (necessary to enter in the admin area).
+from the project root path.
 
-  NOTE:
-  If you have problem about "module messages not found" you are probably using the default EL5 Django version (1.1.4). The message module was introduced in Django 1.2.  So please upgrade it.
+If all works fine you should see messages about the creation of tables and
+filling of default data. During this setup (the first time) you need to 
+configure the django admin user too (necessary to enter in the admin area).
 
-At the end of this process you car startup your application server and explorer the webui application. To do this, simply run:
+NOTE: if you have an error "module messages not found" you are probably using
+the default el5 Django version (1.1.4). The message module was introduced in
+Django 1.2.  So please upgrade it.
+
+At the end of this process you can start your application server and explore the
+webui application. To do this, simply run:
 
 python src/automatix/manage.py runserver
 
-and then access to the application using:
+and then access to the application at:
 
 http://localhost:8000
 
-If you need to let access from other machines (you can't access using a brower on localhost) you need to bind the Django server on external network interface (or use the "all interfaces" wildcard). So, use this command:
+If you need to enable access from other machines (i.e. you can't use a browser
+on localhost) you need to bind the Django server on external network interface
+(or use the "all interfaces" wildcard). So, use this command:
 
 python src/automatix/manage.py runserver 0.0.0.0:8000
 
-that will start server binded on any found interface using port 8000 (that you can naturally change)
+This will start the server bounded to any network and using port 8000 
+(you can also change the port, of course)
+
+
