New deps and some details

--- a/README
+++ b/README
@@ -1,14 +1,11 @@
 This is a WebUI for the management of MCollective.
 
-It is written with Django 1.3 and Python 2.6 (but it works fine with Python 2.4
-too).
+It is written with Django 1.3 and Python 2.6
 
-First of all, you need to install this framework. Here a complete
-list of packages required for the webui:
- * Django-1.3-2.1.el5.noarch.rpm 
- * python-httplib2
- * python-simplejson
- * (python-sqlite2 if you use a sqlite database)
+First of all, you need to install this framework.
+
+On el5 you'll need to install the packages : Django, python26 and other
+dependencies that you can check in misc/specs/kermit-webui.spec 
 
 One way to get those packages for el5/centos 5 is the KERMIT repository :
 http://www.kermit.fr/repo/rpm/
@@ -17,7 +14,11 @@ After the installation of the packages you'll need to configure the application.
 In the file 'settings.py', Django require some absolute path to locate the
 sqlite db file (used for development), images, templates, etc. 
 
-Another thing you may want to change is the Ruby MCollective Rest Server. By
+The WebUI uses a REST server to communicate with a MCollective backend.
+
+See : https://github.com/thinkfr/restmco
+
+You may want to change the Ruby MCollective REST Server parameters. By
 default it is set on the same machine as the webui, for security reasons.
 In the file 'settings.py' you need to adjust the line:
 
@@ -26,7 +27,7 @@ RUBY_REST_BASE_URL="http://localhost:4567/mcollective/"
 Now you are ready to configure your database (sqlite or what you have configured
 in settings.py). To do this run:
 
-python src/webui/manage.py syncdb --noinput
+python26 src/webui/manage.py syncdb --noinput
 
 from the project root path.
 
@@ -41,7 +42,7 @@ Django 1.2.  So please upgrade it.
 At the end of this process you can start your application server and explore the
 webui application. To do this, simply run:
 
-python src/webui/manage.py runserver
+python26 src/webui/manage.py runserver
 
 and then access to the application at:
 
@@ -51,7 +52,7 @@ If you need to enable access from other machines (i.e. you can't use a browser
 on localhost) you need to bind the Django server on external network interface
 (or use the "all interfaces" wildcard). So, use this command:
 
-python src/webui/manage.py runserver 0.0.0.0:8000
+python26 src/webui/manage.py runserver 0.0.0.0:8000
 
 This will start the server bounded to any network and using port 8000 
 (you can also change the port, of course)
@@ -60,6 +61,6 @@ This will start the server bounded to any network and using port 8000
 
 Quick and dirty version :
 
-python src/webui/manage.py syncdb --noinput
-python src/webui/manage.py runserver 0.0.0.0:8000
+python26 src/webui/manage.py syncdb --noinput
+python26 src/webui/manage.py runserver 0.0.0.0:8000
 
