--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a WebUI for the management of MCollective.
+This is a WebUI for the management of Marionette Collective.
 
 It is written with Django 1.3 and Python 2.6
 
